--- a/app/src/main/res/layout/activity_comentarios.xml
+++ b/app/src/main/res/layout/activity_comentarios.xml
@@ -52,38 +52,86 @@
             app:layout_constraintVertical_bias="0.063" />
 
         <TextView
-            android:id="@+id/textViewId"
-            android:layout_width="match_parent"
+            android:id="@+id/textViewCliente"
+            android:layout_width="160dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="20dp"
+            android:text="Nome do Cliente"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btnEncerrar" />
+
+        <TextView
+            android:id="@+id/textViewClienteDesc"
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:text="nome"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textViewCliente" />
+
+        <TextView
+            android:id="@+id/textViewId"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:text="Id do serviço"
             android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/textViewCliente"
             app:layout_constraintTop_toBottomOf="@+id/btnEncerrar"
-            tools:layout_editor_absoluteX="0dp" />
+            tools:ignore="MissingConstraints" />
 
         <TextView
             android:id="@+id/textViewIdDesc"
-            android:layout_width="match_parent"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginTop="4dp"
             android:text="id"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/textViewClienteDesc"
             app:layout_constraintTop_toBottomOf="@+id/textViewId" />
+
+        <TextView
+            android:id="@+id/textViewValorTotal"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="Valor Total"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.489"
+            app:layout_constraintStart_toEndOf="@+id/textViewId"
+            app:layout_constraintTop_toBottomOf="@+id/btnEncerrar"
+            tools:ignore="MissingConstraints" />
+
+        <TextView
+            android:id="@+id/textViewValorTotalDesc"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:text="Total"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.489"
+            app:layout_constraintStart_toEndOf="@+id/textViewIdDesc"
+            app:layout_constraintTop_toBottomOf="@+id/textViewValorTotal" />
 
         <TextView
             android:id="@+id/textViewServico"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
             android:layout_marginTop="20dp"
             android:text="Serviço"
             android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@+id/textViewIdDesc" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewIdDesc"
+            tools:layout_editor_absoluteX="-6dp" />
 
         <TextView
             android:id="@+id/textViewServicoDesc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
             android:text="Serviço"
             app:layout_constraintTop_toBottomOf="@+id/textViewServico" />
 
@@ -92,13 +140,11 @@
             android:id="@+id/textViewAssunto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="8dp"
             android:text="Assunto"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/scrollview"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/textViewComentario"
@@ -116,7 +162,7 @@
             android:id="@+id/scrollview"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="50dp"
             app:layout_constraintTop_toBottomOf="@+id/textViewServicoDesc"
             tools:layout_editor_absoluteX="0dp">
 
@@ -132,7 +178,7 @@
 
                 <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="91dp">
 
                     <TextView
                         android:layout_width="0dp"
